--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="" alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="" alt="A concessionária Pops and Bangs, não proporciona apenas carros e sim emoções" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
               </div>
     </section>
@@ -70,7 +70,7 @@
                     - JSmg src="pngegg.png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
+                    <h2>O que é a Pops and Bangs?</h2>
                     <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
                         brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
                         abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
