--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
                 </div>
                 <div class="col-5">
                     <h2>O que é a Pops and Bangs?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <p class="p-2">Pops and Bangs é uma concessionária especializada em carros de alta performance
+                         e personalização, fundada em 2010. Aqui, cada veículo é mais do que um simples carro – é uma 
+                         experiência única de potência e estilo. Nossa missão é oferecer modelos de qualidade, 
+                         com aquele som inconfundível que só um motor bem afinado pode proporcionar. 
+                         Na Pops and Bangs, você encontra carros que refletem sua paixão pela velocidade e personalidade,
+                        com a possibilidade de personalizações exclusivas. Pops and Bangs: onde cada aceleração conta.</p>
                 </div>
             </div>
         </section>
