--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
                         <img src="onix.jpg"
+                        <img src="lamborghini.jpg"
+                        <img src="fuscabarbie.jpeg"
+                        <img src="p1.jpeg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
