--- a/index.html
+++ b/index.html
@@ -88,22 +88,19 @@
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
                         <img src="onix.jpg"
-                        <img src="lamborghini.jpg"
-                        <img src="fuscabarbie.jpeg"
-                        <img src="p1.jpeg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="vin.png" class="img-fluid rounded-5"
+                        <img src="fuscabarbie.jpegs" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="gettyimages-1163831099-h_2020.webp" class="img-fluid rounded-5" loading="lazy">
+                        <img src="p1.jpeg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="bryancranston-walterwhite-breaking_bad-divulgacao.jpg"
+                        <img src="lamborghini.jpg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
