--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="fuscabarbie.jpegs" class="img-fluid rounded-5"
+                        <img src="dojao.jpeg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
